--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -1,15 +1,15 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=📢 mosdns代理,[]PROCESS-NAME,mosdns
+#ruleset=📢 mosdns代理,[]PROCESS-NAME,mosdns
 ruleset=✨ OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Telegram/Telegram.list
 ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TelegramUS/TelegramUS.list
-#ruleset=REJECT,[]DOMAIN-SUFFIX,android-appboot.netflix.com
-#ruleset=REJECT,[]DOMAIN-SUFFIX,android.prod.cloud.netflix.com
-#ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
-#ruleset=REJECT,[]DOMAIN-SUFFIX,ios.prod.cloud.netflix.com
-#ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
+ruleset=REJECT,[]DOMAIN-SUFFIX,android-appboot.netflix.com
+ruleset=REJECT,[]DOMAIN-SUFFIX,android.prod.cloud.netflix.com
+ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
+ruleset=REJECT,[]DOMAIN-SUFFIX,ios.prod.cloud.netflix.com
+ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
 
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
 #ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
