--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -11,9 +11,9 @@ ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
 ruleset=REJECT,[]DOMAIN-SUFFIX,ios.prod.cloud.netflix.com
 ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.prod.cloud.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp-ipv6.prod.ftl.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp80-appboot.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp-ipv6.prod.ftl.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp80-appboot.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
 
 
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
