--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -11,7 +11,7 @@ ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp80-appboot.netflix.com
 ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
 
-
+ruleset=🎥 Netflix,PROCESS-NAME,com.netflix.ninja
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
 #ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Amazon/Amazon.list
