--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -1,15 +1,15 @@
 [custom]
 ;解决DNS泄露，无分流群组
 #ruleset=📢 mosdns代理,[]PROCESS-NAME,mosdns
-ruleset=REJECT,[]DOMAIN-SUFFIX,android-appboot.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,android.prod.cloud.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,ios.prod.cloud.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,android-appboot.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,android.prod.cloud.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,ios.prod.cloud.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,ios.ngp.prod.cloud.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.prod.cloud.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp-ipv6.prod.ftl.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp80-appboot.netflix.com
-ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
+#ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
 
 
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
