--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -31,6 +31,7 @@ ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=📢 GoogleAll,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 GoogleAll,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=📢 GoogleAll,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Google/Google.list
+ruleset=📢 GoogleAll,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=📢 GoogleAll,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleDrive/GoogleDrive.list
 ruleset=📢 GoogleAll,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleEarth/GoogleEarth.list
 ruleset=📢 GoogleAll,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.list
