--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -10,8 +10,8 @@
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp-ipv6.prod.ftl.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp80-appboot.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
-ruleset=REJECT,[]IP-CIDR,8.8.8.8/32,no-resolve
-ruleset=REJECT,[]IP-CIDR,8.8.4.4/32,no-resolve
+#ruleset=REJECT,[]IP-CIDR,8.8.8.8/32,no-resolve
+#ruleset=REJECT,[]IP-CIDR,8.8.4.4/32,no-resolve
 
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎥 Netflix,[]PROCESS-NAME,com.netflix.ninja
