--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
-#ruleset=📢 mosdns代理,[]PROCESS-NAME,mosdns
+ruleset=📢 mosdns代理,[]PROCESS-NAME,mosdns
 #ruleset=REJECT,[]DOMAIN-SUFFIX,android-appboot.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,android.prod.cloud.netflix.com
 #ruleset=REJECT,[]DOMAIN-SUFFIX,appboot.netflix.com
@@ -12,7 +12,7 @@
 #ruleset=REJECT,[]DOMAIN-SUFFIX,nrdp.ws.ale.netflix.com
 #ruleset=REJECT,[]IP-CIDR,8.8.8.8/32,no-resolve
 #ruleset=REJECT,[]IP-CIDR,8.8.4.4/32,no-resolve
-ruleset=🎥 Netflix,[]PROCESS-NAME,mosdns
+#ruleset=🎥 Netflix,[]PROCESS-NAME,mosdns
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎥 Netflix,[]PROCESS-NAME,com.netflix.ninja
 #ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
@@ -67,7 +67,7 @@ custom_proxy_group=🐹 DisneyPlus`select`[]♻️ 自动选择`[]🚀 节点选
 custom_proxy_group=📹 Youtube`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🙋 Telegram`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=Ⓜ️ 微软`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
-#custom_proxy_group=📢 mosdns代理`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
+custom_proxy_group=📢 mosdns代理`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
