--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -13,11 +13,11 @@
 #ruleset=REJECT,[]IP-CIDR,8.8.8.8/32,no-resolve
 #ruleset=REJECT,[]IP-CIDR,8.8.4.4/32,no-resolve
 #ruleset=🎥 Netflix,[]PROCESS-NAME,mosdns
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
-ruleset=🎥 Netflix,[]PROCESS-NAME,com.netflix.ninja
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
+ruleset=Netflix,[]PROCESS-NAME,com.netflix.ninja
 #ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Amazon/Amazon.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/AmazonIP/AmazonIP.list
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Amazon/Amazon.list
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/AmazonIP/AmazonIP.list
 
 #ruleset=🎥 Netflix,[]DOMAIN-REGEX,(^|\.)apiproxy-device-prod-nlb-.+\.amazonaws\.com$
 #ruleset=🎥 Netflix,[]DOMAIN-REGEX,(^|\.)apiproxy-website-nlb-prod-.+\.amazonaws\.com$
@@ -63,7 +63,7 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=📢 GoogleAll`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=✨ OpenAI`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=👯‍♂️ TikTok`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
-custom_proxy_group=🎥 Netflix`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
+custom_proxy_group=Netflix`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🐹 DisneyPlus`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=📹 Youtube`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🙋 Telegram`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
