--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -23,6 +23,7 @@ ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 #ruleset=🎥 Netflix,[]DOMAIN-REGEX,(^|\.)apiproxy-website-nlb-prod-.+\.amazonaws\.com$
 #ruleset=🎥 Netflix,[]DOMAIN-REGEX,(^|\.)dualstack\.apiproxy-.+\.amazonaws\.com$
 #ruleset=🎥 Netflix,[]DOMAIN-REGEX,(^|\.)dualstack\.ichnaea-web-.+\.amazonaws\.com$
+ruleset=😀 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
 ruleset=🐹 DisneyPlus,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Disney/Disney.list
 ruleset=✨ OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -68,6 +69,7 @@ custom_proxy_group=🐹 DisneyPlus`select`[]♻️ 自动选择`[]🚀 节点选
 custom_proxy_group=📹 Youtube`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=🙋 Telegram`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=Ⓜ️ 微软`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
+custom_proxy_group=😀 Instagram`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 #custom_proxy_group=📢 mosdns代理`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 #custom_proxy_group=🚀 dns解析`select`[]♻️ 自动选择`[]🚀 节点选择`[]DIRECT`.*
